--- a/public/index.html
+++ b/public/index.html
@@ -1,29 +1,20 @@
 <!DOCTYPE html><html lang="en"><head>
-    <script src="p5.js"></script>
-    <script src="p5.sound.min.js"></script>
-    <title>Socket.IO chat</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <style>
-      * { margin: 0; padding: 0; box-sizing: border-box; }
-      body { font: 13px Helvetica, Arial; }
-      form { background: #000; padding: 3px; position: fixed; bottom: 0; width: 100%; }
-      form input { border: 0; padding: 10px; width: 90%; margin-right: 0.5%; }
-      form button { width: 9%; background: rgb(130, 224, 255); border: none; padding: 10px; }
-      #messages { list-style-type: none; margin: 0; padding: 0; }
-      #messages li { padding: 5px 10px; }
-      #messages li:nth-child(odd) { background: #eee; }
-    </style>
-    <meta charset="utf-8">
+  <meta charset="UTF-8">
 
-  </head>
-  <body>
-    <ul id="messages"></ul>
-    <form action="">
-      <input id="m" autocomplete="off" /><button>Send</button>
-    </form>
-    <script src="socket.io/socket.io.js"></script>
-    <script src="sketch.js"></script>
-    <script>
-      var socket = io();
-    </script>
-  </body></html>
+  <title>Real time Object Detection using YOLO and p5.js</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <script src="p5.min.js"></script>
+  <script src="p5.sound.min.js"></script>
+  <script src="p5.dom.min.js"></script>
+  <script src="ml5.min.js" type="text/javascript"></script>
+  
+</head>
+                               <body>
+                                   <h1>Real time Object Detection using YOLO and p5.js</h1>
+                                   <p id="status">Loading Model...</p>
+                                   <script src="sketch.js"></script>
+                                   <script src="socket.io/socket.io.js"></script>
+                                   <script>var socket = io();</script>
+
+                               </body></html>
