--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><html lang="en"><head>
   <meta charset="UTF-8">
 
-  <title>Real time Object Detection using YOLO and p5.js</title>
+  <title>Playful Virtual Music Cocreation using everyday objects...</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script src="p5.min.js"></script>
