--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
                                <body>
                                    <h1></h1>
                                    <p id="status"></p>
+                                   <button id = "start">START</button>
+                                   <button id = "start2">START</button>
                                    <script src="sketch.js"></script>
                                    <img id="MCC" src="./imgs/MCC.png" >
                                    <img id="P1" src="./imgs/P1_profile.png" >
@@ -24,7 +26,7 @@
                                     <button id = "record"> RECORD </button>
                                    <button id = "doodle"> DOODLE </button>
                                    <button id = "photo"> PHOTO </button>
-                                  
+
                                    
                                    <div id = "popUp"></div>                                   <script src="socket.io/socket.io.js"></script>
 
