--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
                                    
                                    <button id = "start"> START </button>
                                    <button id = "latin"> LATIN </button>
+                                   <button id = "ambient"> AMBIENT </button>
                                    <button id = "camera1"> CAMERA </button>
                                    <button id = "hint"> HINT </button>
                                     <button id = "record"> RECORD </button>
