--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
                                    <img id="P1" src="./imgs/P1_profile.png" >
                                
                                    
-                                   <button id = "start"> START </button>
+                                   <button id = "start"> START MUSIC!</button>
                                    <button id = "latin"> LATIN </button>
                                    <button id = "ambient"> AMBIENT </button>
                                    <button id = "camera1"> CAMERA </button>
