--- a/public/index.html
+++ b/public/index.html
@@ -24,9 +24,9 @@
                                    <button id = "ambient"> AMBIENT </button>
                                    <button id = "camera1"> CAMERA </button>
                                    <button id = "hint"> HINT </button>
-                                    <button id = "record"> RECORD </button>
+<!--                                    <button id = "record"> RECORD </button>
                                    <button id = "doodle"> DOODLE </button>
-                                   <button id = "photo"> PHOTO </button>
+                                   <button id = "photo"> PHOTO </button>-->
 
                                    
                                    <div id = "popUp"></div>                                   <script src="socket.io/socket.io.js"></script>
